...
      }} />
      <Tabs.Screen name="search" options={{
        title: 'Explore',
        tabBarIcon: ({ color, size }) => <Ionicons name="search" size={size} color={color} />,
      }} />
      <Tabs.Screen name="cart" options={{
        title: 'Cart',
        tabBarIcon: ({ color, size }) => (
          <View>
            <Ionicons name="bag-handle" size={size} color={color} />
            <TabBarBadge count={cartCount} />
          </View>
        ),
...
